# rust_chess

./: .gitignore  Cargo.toml  README.md
chess_app/: Cargo.toml  Makefile.toml
chess_app/docker/: docker-compose.yml
chess_app/src/: gui.rs  main.rs
chess_app/src/gui/: connect.rs  game.rs  main_menu.rs
chess_app/web/: index.html
chess_client/: Cargo.toml  Makefile.toml
chess_client/src/: gui.rs  main.rs  types.rs
chess_client/src/gui/: connect.rs  game.rs  main_menu.rs
chess_client/src/gui/game/: gamestate.rs  mouse.rs  screen.rs
chess_client/web/: index.html
chess_engine/: Cargo.toml
chess_engine/src/: board.rs  castle_perm.rs  castle_perms.rs  color.rs  error.rs  file.rs  gamestate.rs  lib.rs  macros.rs  moves.rs  piece.rs  pieces.rs  position_key.rs  rank.rs  square.rs  squares.rs  util.rs  zobrist.rs
chess_engine/src/board/: bitboard.rs  board.rs  mod.rs
chess_engine/tests/: perft.rs  perft_expected.txt  perft_expected_divided_depth_6.txt  perft_fens.txt
chess_server/: Cargo.toml
chess_server/configs/: default.toml  prod.toml
chess_server/src/: main.rs
