[package]
name = "chess_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess_engine = { path = "../chess_engine" }
console_log = { version = "0.2", features = ["color"] }
log = "0.4"
macroquad = "0.3"
quad-net = { git = "https://github.com/escobar-west/quad-net.git" }