[package]
name = "chess_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = { version = "0.2", features = ["color"] }
log = "0.4"
macroquad = "0.3"
quad-net = { git = "https://github.com/escobar-west/quad-net.git" }
nanoserde = "0.1"