[package]
name = "chess_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = {version = "0.24.1", features = ["phf"]}
strum_macros = "0.24.3"
thiserror = "1.0.38"
num = "0.4.0"
rand = {version = "0.8.5", features = ["min_const_gen"]}
rand_pcg = "0.3.1"
once_cell = "1.17.1"